--- a/src/webApp/index.template.html
+++ b/src/webApp/index.template.html
@@ -20,7 +20,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>React App</title>
-    <script type="text/javascript" src="http://api.map.baidu.com/api?v=2.0&ak=EChjeTTuY2m5Hthnoy2FZkpdTe0bpDZ7"></script>
+    <script type="text/javascript" src="https://api.map.baidu.com/api?v=2.0&ak=EChjeTTuY2m5Hthnoy2FZkpdTe0bpDZ7"></script>
   </head>
   <body>
     <noscript>
